--- a/app/src/main/res/layout/activity_class_details.xml
+++ b/app/src/main/res/layout/activity_class_details.xml
@@ -23,14 +23,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/class_name"
             android:textSize="25sp"
-            android:text="CS61A"/>
+            android:text=""/>
         <TextView
             android:layout_marginLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/instructor_name"
             android:textSize="18sp"
-            android:text="John Denero"/>
+            android:text=""/>
 
     </LinearLayout>
     <TextView
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/description"
         android:textSize="10sp"
-        android:text="An introduction to programming and computer science focused on abstraction techniques as means to manage program complexity."/>
+        android:text=""/>
 
     <TextView
         android:layout_width="match_parent"
@@ -51,37 +51,29 @@
         android:textSize="10sp"
         android:text="Terms Offered: Fall 2018, Summer 2018, Spring 2018"/>
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
+        android:orientation="vertical"
         android:layout_marginRight="40sp"
         android:layout_marginLeft="40sp"
-        android:textSize="12sp"
-        android:text="Class Availability:"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5sp"
-        android:layout_marginRight="40sp"
-        android:layout_marginLeft="40sp"
-        android:textSize="9sp"
-        android:text="15 Spots for EECS"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40sp"
-        android:layout_marginLeft="40sp"
-        android:textSize="9sp"
-        android:text="22 Spots for Undeclared Engineering"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40sp"
-        android:layout_marginLeft="40sp"
-        android:textSize="9sp"
-        android:text="70 spots for Letters and Science Undeclared"/>
+        android:id="@+id/availability">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:textSize="12sp"
+            android:text="Class Availability:"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2sp"
+            android:id="@+id/total_spots"
+            android:textSize="10.5sp"
+            android:text="  Spots Avaliable"/>
+
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_marginTop="5dp"
@@ -114,13 +106,21 @@
         android:height="2dp"
         android:background="@color/colorBar"/>
 
-    <TextView
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="40sp"
+            android:layout_marginLeft="40sp"
+            android:textSize="12sp"
+            android:text="Professor Rating"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginRight="40sp"
-        android:layout_marginLeft="40sp"
-        android:layout_marginTop="5dp"
-        android:textSize="12sp"
-        android:text="Professor Rating"/>
-
+        android:layout_marginLeft="40sp">
+        
+    </LinearLayout>
 </LinearLayout>
