--- a/app/src/main/res/layout/activity_class_details.xml
+++ b/app/src/main/res/layout/activity_class_details.xml
@@ -89,15 +89,101 @@
         android:layout_marginTop="5dp"
         android:textSize="12sp"
         android:text="Average Grade"/>
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="200dp"
+        android:minHeight="100dp"
+        android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:background="@drawable/border"
-        ></FrameLayout>
+        >
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20sp"
+                android:textSize="25sp"
+                android:id="@+id/grade_below"
+                android:text="A-"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="1sp"
+                android:textSize="10sp"
+                android:text="25th-34th \n percentile"
+                android:id="@+id/grade_below_label"
+                android:layout_below="@+id/grade_below"
+                />
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20sp"
+                android:textSize="25sp"
+                android:id="@+id/grade_middle"
+                android:textStyle="bold"
+                android:text="A"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="1sp"
+                android:textSize="10sp"
+                android:id="@+id/grade_middle_label"
+                android:text="35th-51st \n percentile"
+                android:layout_below="@+id/grade_middle"
+                />
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20sp"
+                android:textSize="25sp"
+                android:id="@+id/grade_upper"
+                android:text="A+"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="1sp"
+                android:id="@+id/grade_upper_label"
+                android:textSize="10sp"
+                android:text="51st-69th \n percentile"
+                android:layout_below="@+id/grade_upper"
+                />
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -120,7 +206,82 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginRight="40sp"
-        android:layout_marginLeft="40sp">
-        
+        android:layout_marginLeft="40sp"
+        android:layout_margin="10sp">
+
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="100dp"
+            android:layout_marginLeft="40sp"
+            android:layout_height="100dp">
+             <com.example.android.coursehelper.Circle
+                android:id="@+id/circle"
+                android:layout_width="200dp"
+                android:layout_height="200dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="25dp"
+                android:id="@+id/quality" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="40dp"
+                android:text="Overall Quality"
+                android:id="@+id/quality_label"
+                android:textSize="9sp"/>
+         </RelativeLayout>
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="100dp"
+            android:layout_height="100dp">
+            <com.example.android.coursehelper.Circle
+                android:id="@+id/circle2"
+                android:layout_width="200dp"
+                android:layout_height="200dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="22dp"
+                android:id="@+id/recommend" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="37dp"
+                android:text="Would Take \n Again"
+                android:textAlignment="center"
+                android:textSize="9sp"
+                android:id="@+id/recommend_label"/>
+        </RelativeLayout>
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="140dp"
+
+            android:layout_height="140dp">
+            <com.example.android.coursehelper.Circle
+                android:id="@+id/circle3"
+                android:layout_width="200dp"
+                android:layout_height="200dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:id="@+id/difficulty"
+                android:layout_marginTop="25dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="21dp"
+                android:layout_marginTop="40dp"
+                android:text="Difficulty"
+                android:id="@+id/difficulty_label"
+                android:textSize="9sp"/>
+        </RelativeLayout>
+
+
     </LinearLayout>
 </LinearLayout>
